# SDLExample

./: CMakeCache.txt  CMakeLists.txt  SDL2.framework alias  cmake_install.cmake  simple
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Debug/: basic-fixed.vert  simple
codeblocks/: CMakeCache.txt  Makefile  cmake_install.cmake  simple.cbp
shaders/: basic-fixed.frag
simple.build/Debug/ALL_BUILD.build/: Script-9B623E8C80AB465695237124.sh  dgph
simple.build/Debug/ZERO_CHECK.build/: Script-08FFAE716E6549599BE2E989.sh  dgph  dgph~
simple.build/Debug/simple.build/: dgph
simple.build/Debug/simple.build/Objects-normal/x86_64/: Program.d  Program.dia  SDLMain.d  SDLMain.dia  Shader.d  glew.d  main.d  main.dia  simple.LinkFileList
simple.build/Release/ZERO_CHECK.build/: dgph
simple.build/Release/simple.build/: dgph  dgph~
simple.xcodeproj/: project.pbxproj
simple.xcodeproj/project.xcworkspace/xcuserdata/joshuadahl.xcuserdatad/: UserInterfaceState.xcuserstate
simple.xcodeproj/xcuserdata/joshuadahl.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
simple.xcodeproj/xcuserdata/joshuadahl.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Program.cpp  Shader.cpp  main.cpp
vc++/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  simple.sln  simple.vcproj
