CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(simple)

SET(SOURCE_FILES 
src/main.cpp
)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )
ADD_EXECUTABLE(simple ${SOURCE_FILES})

IF(WIN32)
	SET(LIBRARIES SDL SDLmain OPENGL32 GLU32)
	INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src )
ELSE(WIN32)
	SET(LIBRARIES SDL SDLmain GL GLU)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(simple ${LIBRARIES})
